# proton-crypto-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rustdoc.yml
gopenpgp-sys/: CHANGELOG.md  Cargo.toml  build.rs
gopenpgp-sys/go/: common.h  decrypt.go  go.mod  go.sum  gohandles.go  gopenpgp.go  keys.go  lib.go  verify.go
gopenpgp-sys/src/: keys.rs  verification.rs
gopenpgp-sys/src/tests/: decryption.rs
proton-crypto/: CHANGELOG.md  Cargo.toml
proton-crypto-account/: CHANGELOG.md  Cargo.toml
proton-crypto-account/examples/: proton_keys.rs
proton-crypto-account/src/: errors.rs  lib.rs
proton-crypto-account/src/keys/: address_keys.rs  recipient.rs  user_keys.rs
proton-crypto-account/src/recovery/: mod.rs
proton-crypto-account/tests/: common.rs  keys.rs  recovery.rs
proton-crypto-subtle/: Cargo.toml
proton-crypto/src/: lib.rs
proton-crypto/src/crypto/: decrypt.rs  encrypt.rs  keys.rs  mod.rs  sign.rs  verify.rs
proton-crypto/src/go/: pgp.rs
proton-crypto/src/rust/: mod.rs  pgp.rs
proton-crypto/src/rust/pgp/: keys.rs
proton-crypto/tests/: common.rs  crypto.rs
proton-device-verification/: Cargo.toml
proton-rpgp/: CHANGELOG.md  Cargo.toml
proton-rpgp/src/: decrypt.rs  encrypt.rs  errors.rs  key.rs  profile.rs  types.rs  verify.rs
proton-rpgp/src/decrypt/: message.rs
proton-rpgp/src/encrypt/: message.rs
proton-rpgp/src/key/: component.rs  generation.rs  modification.rs  params.rs  preferences.rs  selection.rs
proton-rpgp/src/profile/: keygen.rs  settings.rs
proton-rpgp/src/signature/: message.rs
proton-rpgp/src/verify/: reader.rs
proton-rpgp/test-data/keys/: locked_private_key_v4.asc  locked_private_key_v4_aead.asc  locked_private_key_v4_elgamal_subkey.asc  locked_private_key_v4_malformed_primary_params.asc  locked_private_key_v4_malformed_subkey_params.asc  locked_private_key_v4_no_seipdv2.asc  locked_private_key_v4_one_subkey_unlocked.asc  locked_private_key_v4_primary_dsa.asc  locked_private_key_v4_rsa_malformed_subkey.asc  locked_private_key_v4_seipdv2.asc  locked_private_key_v4_with_one_public_subkey.asc
proton-rpgp/test-data/signatures/: signature_v4_empty.asc
proton-rpgp/tests/: decrypt.rs  encrypt.rs  key.rs  verify.rs
proton-srp/: CHANGELOG.md  Cargo.toml
