[package]
name = "proton-crypto-subtle"
version = "0.2.1"
edition.workspace = true

license-file = "LICENSE"
description = "Low-level primitives: AEAD, HKDF"
repository.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies] # Enable js BE for wasm targets
getrandom_legacy = { package = "getrandom", version = "0.2", features = ["js"] }

[lints]
workspace = true

[features]
default = []
legacy = []
