[package]
name = "proton-crypto"
version = "0.12.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
gopenpgp-sys = { workspace = true, optional = true }
proton-rpgp = { workspace = true, optional = true }
proton-srp = { workspace = true }
thiserror = { workspace = true }
serde = { version="1", features = ["derive"]}
hex = { workspace = true }
parking_lot = "0.12"
subtle = "2.5.0"
rand = { workspace = true }
web-time = { workspace = true }
facet = { workspace = true, optional = true }

[target.'cfg(forcego)'.dependencies]
gopenpgp-sys = { workspace = true }

[dev-dependencies]
smol = "2.0.0"

[features]
default = ["gopgp"]
rustpgp = ["dep:proton-rpgp"]
gopgp = ["dep:gopenpgp-sys"]
rustpgp_asm = ["rustpgp", "proton-rpgp/asm"]
multi_be = ["rustpgp", "gopgp"]
facet = ["dep:facet"]

[lints]
workspace = true
