[package]
name = "proton-rpgp"
version = "0.3.1"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
pgp = { version = "0.19.0", default-features = false, features = ["draft-pqc", "malformed-artifact-compat", "draft-wussler-openpgp-forwarding", "large-rsa"] }
thiserror = { workspace = true }
rsa = "0.9.10"
rand = { workspace = true }
sha2 = { workspace = true , features = ["oid"] }
hex = { workspace = true }
zeroize = { workspace = true }
smallvec = "1.10.0"
kem = "=0.3.0-pre.0" # pinned to avoid automatic update in downstream project. 
web-time = { workspace = true }
nom = "8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
pgp = { version = "0.19.0", default-features = false, features = ["draft-pqc", "malformed-artifact-compat", "draft-wussler-openpgp-forwarding", "large-rsa", "wasm"] }

[features]
default = []
# Enables assembly based optimizations
asm = ["pgp/asm"]

[lints]
workspace = true
