[package]
name = "proton-srp"
version = "0.8.2"
edition.workspace = true

license-file = "LICENSE"
description = "Pure Rust implementation of Proton’s Secure Remote Password (SRP) protocol"
repository.workspace = true
authors.workspace = true

[dependencies]
bcrypt = "0.17.1"
md5 = { package = "md-5", version = "0.10.6" }
crypto-bigint = { version = "0.5.5", features = ["zeroize"] }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
# Optional
pgp = { version = "0.19.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies] # Force js BE for wasm targets
getrandom = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_legacy = { package = "getrandom", version = "0.2", features = ["js"] }

[features]
default = ["pgpinternal"]
pgpinternal = ["dep:pgp"]
custom_csprng = []

[profile.test]
opt-level = 3

[lints]
workspace = true
